--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
+
+<center>  
 <h1>Odin Recipes</h1>
 
 <a href="recipes/lasagna.html">Recipe for Lasagna</a>
 
-
+</center>
 
 </html>
